--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" >
 <footer  data-th-fragment="footerFragment" class="page-footer">
-    <div class="footer-copyright">
+    <div class="footer-copyright" style="background-image: linear-gradient(to right, rgb(112,128,144), rgb(176,196,222), rgb(176,196,222) , rgb(112,128,144) );">
         <div class="container-fluid text-center text-info">
             <p>
                 <strong>
                     <i>
                         <a href="#" target="_blank">
-                            &copy; &nbsp;<span id="currentYear"></span> &nbsp; ARO Computer
+                        <p>Copyright © 2020 Sanchana Bag Shop. All rights reserved.</p>
                         </a>
                     </i>
                 </strong>
