exchange service also added but couldn't be verified, there are no invoices on provided database .

--- a/src/main/resources/templates/exchange/exchange.html
+++ b/src/main/resources/templates/exchange/exchange.html
@@ -21,7 +21,7 @@
         <div class="col" >
           <h2 class="text text-center" >
             <strong >
-              <span data-th-text="${addStatus==true?'New Brand':'Fiend Invoice'}" ></span >
+              <span data-th-text="${addStatus==true?'New Brand':'Find Invoice'}" ></span >
             </strong >
           </h2 >
         </div >
