--- a/src/main/resources/templates/category/category.html
+++ b/src/main/resources/templates/category/category.html
@@ -56,7 +56,7 @@
                   <a id="categoryEdit" data-th-href="${'/category/edit/' + category.id}"
                      class="btn btn-success btn-sm" ><i class="fa fa-edit" style="font-size: 15px" ></i >&nbsp;Edit</a >
                   <a id="categoryRemove" data-th-href="${'/category/remove/' + category.id}"
-                     class="btn btn-danger btn-sm"  data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+                     class="btn btn-danger btn-sm"  data-th-if="${#authorization.expression('hasRole(''ROLE_MANAGER'')')}">
                <i class="fa fa-trash"
                                                                                                      style="font-size: 15px" ></i >
                     Delete</a >
