--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -77,7 +77,7 @@
                   <a id="employeeEdit" data-th-href="${'/employee/edit/' + employee.id}"
                      class="btn btn-primary btn-sm" ><i class="fa fa-edit" ></i >&nbsp;Edit</a >
                   <a id="employeeRemove" data-th-href="${'/employee/remove/' + employee.id}"
-                     data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
+                     data-th-if="${#authorization.expression('hasRole(''ROLE_MANAGER'')')}"
                      class="btn btn-danger btn-sm" ><i class="fa fa-trash" ></i >
                     Delete</a >
                 </th >
