--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -22,36 +22,38 @@
            aria-haspopup="true"
            aria-expanded="false" > <i class="fa fa-user" ></i > General</a >
         <div class="dropdown-menu" aria-labelledby="dropdownId" >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_HR_MANAGER' ,'ROLE_ADMIN')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER','ROLE_ADMIN')"
              data-th-href="@{'/employee'}" class="nav-link text-primary" > Employee Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_HR_MANAGER' , 'ROLE_ADMIN')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ADMIN')"
              data-th-href="@{'/user'}" class="nav-link text-primary" > User Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_HR_MANAGER' , 'ROLE_ADMIN')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER',  'ROLE_ADMIN')"
              data-th-href="@{'/role'}" class="nav-link text-primary" > Role Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER')"
              data-th-href="@{'/category'}" class="nav-link text-primary" > Category Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' ,'ROLE_CASHIER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/item'}" class="nav-link text-primary" > Item Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' ,'ROLE_CASHIER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/itemColor'}" class="nav-link text-primary" > Item Color Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' ,'ROLE_CASHIER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/brand'}" class="nav-link text-primary" > Item Brand Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'CASHIER')"
              data-th-href="@{'/supplier'}" class="nav-link text-primary" > Supplier Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER')"
              data-th-href="@{'/purchaseOrder'}" class="nav-link text-primary" > Purchase Order Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'STOCK_KEEPER')"
              data-th-href="@{'/goodReceivedNote'}" class="nav-link text-primary" > GRN Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER')" data-th-href="@{'/payment'}"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER', 'ROLE_CASHIER')" data-th-href="@{'/payment'}"
              class="nav-link text-primary" > Payment Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' ,'ROLE_ACCOUNT_MANAGER' , 'ROLE_CASHIER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER')"
              data-th-href="@{'/invoice'}" class="nav-link text-primary" > Invoice Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' , 'ROLE_CASHIER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/ledger'}" class="nav-link text-primary" > Ledger Management </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER')"
              data-th-href="@{'/discountRatio'}" class="nav-link text-primary" > Discount Management </a >
           <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')" data-th-href="@{'/customer'}"
              class="nav-link text-primary" > Customer Management </a >
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')" data-th-href="@{'/exchange'}"
+             class="nav-link text-primary" > Exchange Item Management </a >
         </div >
       </li >
 
@@ -59,25 +61,25 @@
         <a class="nav-link text-primary dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
            aria-expanded="false" > <i class="fa fa-bell" ></i > Transaction</a >
         <div class="dropdown-menu" aria-labelledby="dropdownId" >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_HR_MANAGER' ,'ROLE_ADMIN')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER' ,'ROLE_ADMIN')"
              data-th-href="@{'/employee/add'}" class="nav-link text-primary" > New Employee </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_HR_MANAGER' , 'ROLE_ADMIN')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER',  'ROLE_ADMIN')"
              data-th-href="@{'/user/add'}" class="nav-link text-primary" > New User </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_HR_MANAGER' , 'ROLE_ADMIN')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER',  'ROLE_ADMIN')"
              data-th-href="@{'/role/add'}" class="nav-link text-primary" > New Role </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER')"
              data-th-href="@{'/category/add'}" class="nav-link text-primary" > New Category </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/itemColor/add'}" class="nav-link text-primary" > New Item Color </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/brand/add'}" class="nav-link text-primary" > New Brand </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' ,'ROLE_CASHIER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/item/add'}" class="nav-link text-primary" > New Item </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/supplier/add'}" class="nav-link text-primary" > New Supplier </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER','ROLE_CASHIER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER')"
              data-th-href="@{'/invoice/add'}" class="nav-link text-primary" > New Invoice </a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/discountRatio/add'}" class="nav-link text-primary" > New Discount </a >
           <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')" data-th-href="@{'/customer/add'}"
              class="nav-link text-primary" > New Customer </a >
@@ -90,18 +92,18 @@
         <div class="dropdown-menu" aria-labelledby="dropdownId" >
           <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER')" data-th-href="@{'/report/manager'}"
              class="nav-link text-primary" > Manager Report</a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' , 'ROLE_CASHIER')"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_CASHIER')"
              data-th-href="@{'/ledger'}" class="nav-link text-primary" > All Items Report</a >
           <a data-sec-authorize="hasAnyAuthority('ROLE_CASHIER')" data-th-href="@{'/report/cashier'}"
              class="nav-link text-primary" > Cashier Daily Report</a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' )"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER' )"
              data-th-href="@{'/report/payment'}" class="nav-link text-primary" > Payment Daily Report</a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' )"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER' )"
              data-th-href="@{'/report/perCashier'}" class="nav-link text-primary" > Per Cashier Report</a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' )"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER' )"
              data-th-href="@{'/report/perAccount'}" class="nav-link text-primary" > Per Account Department User
                                                                                     Report</a >
-          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' )"
+          <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER' )"
              data-th-href="@{'/report/perItem'}" class="nav-link text-primary" > Per Item Report</a >
         </div >
       </li >
